syntax = "proto3";

option java_package = "com.victormsti";
option java_multiple_files = true;

package com.victormsti;

service ChatService {
    rpc StartChat(stream ChatMessage) returns (stream ChatMessage);
}

message ChatMessage {
    string sender = 1;
    string content = 2;
}
